correct form align

--- a/views/static/css/style.css
+++ b/views/static/css/style.css
@@ -1521,10 +1521,11 @@ aside .widget h5 {
 
 /* 07 Content*/
 .main {
-	float: left;
+	/* float: left; */
 	width: 100%;
 	min-height: 500px;
 	margin-top: 200px;
+	/* margin: auto; */
 	padding-bottom: 100px;
 }
 
